install(FILES
    cleanup
    job_example
    resumejob_example
    multijob_example_header
    multijob_example_subjob
    multijob_example_footer
    resumemultijob_example_header
    resumemultijob_example_subjob
    resumemultijob_example_footer
    job_example_pbs
    job_example_wilson
    resume_example_wilson
    job_tev
    job_example_hopper
    resume_example_hopper
    local_opts_hopper.py
    intrepid_multijob_footer
    intrepid_resumemulti_subjob
    intrepid_multijob_header     
    job_intrepid
    intrepid_multijob_subjob
    local_opts_intrepid.py
    intrepid_resumemulti_footer
    intrepid_resumemulti_header
    resume_intrepid

    DESTINATION lib/synergia-script-templates)
